[Refactor] Improve the queryDSL about product [Issue no]